# schema2object

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  stale.yml  test.yml
schema2object/: __init__.py  api.py  tree.py
tests/: test_objecttree.py
