[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schema2object"
version = "0.1.0"
description = "JSON Schema as object definition — structure maps to attributes, logic maps to methods."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "schema2object contributors" },
]
keywords = ["json", "schema", "object", "tree", "dot-access", "draft-07"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/woolkingx/schema2object"
Issues = "https://github.com/woolkingx/schema2object/issues"

[tool.hatch.build.targets.wheel]
packages = ["schema2object"]
